# my-rust-recipes

./: README.md
vue-crud/api/: Cargo.toml  README.md  diesel.toml  example.env
vue-crud/api/migrations/2025-03-13-235711_create_foos/: down.sql  up.sql
vue-crud/api/src/: lib.rs  main.rs  models.rs  repository.rs  schema.rs
vue-crud/client/: README.md  components.d.ts  package.json  vite.config.mts
vue-crud/client/src/components/: Home.vue
vue-crud/client/src/models/: Foo.ts
vue-jwt/api/: Cargo.toml  README.md
vue-jwt/api/src/: auth.rs  lib.rs  main.rs  model.rs
vue-jwt/client/: README.md  components.d.ts  typed-router.d.ts  vite.config.mts
vue-jwt/client/src/: main.ts
vue-jwt/client/src/components/: Index.vue  Login.vue  Protected.vue
vue-jwt/client/src/pages/: index.vue  login.vue  protected.vue
vue-jwt/client/src/router/: index.ts
vue-jwt/client/src/utils/: auth.ts
